--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
+    "framer-motion": "^12.34.3",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "react": "19.2.3",
